# INS4Droid

./: README.txt  Readme.md  android-project
SDL2-2.32.8/android-project/: local.properties
SDL2-2.32.8/android-project/app/jni/: CMakeLists.txt
SDL2-2.32.8/android-project/app/jni/src/: CMakeLists.txt  ins4droid.c  ins4droid.c~  main.c  main.c~
SDL2-2.32.8/android-project/gradle/wrapper/: gradle-wrapper.properties
